--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-azure-mgmt-resource
-azure-mgmt-compute
-azure-mgmt-network
-azure-identity
+azure-mgmt-resource >= 20.1.0
+azure-mgmt-compute >= 25.0.0
+azure-mgmt-network >= 19.3.0
+azure-identity >= 1.7.1
